unpackaged/main/default/objects/Support_Contracts__c/Support_Contracts__c.object-meta.xml
<CustomObject>
    <label>Support Contract</label>
    <nameField>
        <displayFormat>SC-{00000}-{YY}</displayFormat>
        <label>Support Contract No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>