unpackaged/main/default/objects/Support_Contracts__c/fields/Account_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Division__c</fullName>
    <label>Account Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>