unpackaged/main/default/objects/Support_Contracts__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Contracts (Account)</relationshipLabel>
    <relationshipName>Support_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>