unpackaged/main/default/objects/Support_Contracts__c/fields/Active_Products__c.field-meta.xml
<CustomField>
    <fullName>Active_Products__c</fullName>
    <label>Active Products</label>
    <summaryFilterItems>
        <field>Support_Product__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Support_Product__c.Support_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>