unpackaged/main/default/objects/Support_Contracts__c/fields/BIM_OBJECT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>BIM_OBJECT_STATUS__c</fullName>
    <label>BIM OBJECT STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIVE</fullName>
            </value>
            <value>
                <fullName>ONBOARDING</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>