unpackaged/main/default/objects/Support_Contracts__c/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <formula>( Finish_Date__c - Start_Date__c )/30.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>