unpackaged/main/default/objects/Support_Contracts__c/fields/IsCompetitorVendorContract__c.field-meta.xml
<CustomField>
    <fullName>IsCompetitorVendorContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor/Vendor Contract</label>
    <type>Checkbox</type>
</CustomField>