unpackaged/main/default/objects/Support_Contracts__c/fields/Majenta_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Majenta_Invoice_Number__c</fullName>
    <label>Majenta Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>