unpackaged/main/default/objects/Support_Contracts__c/fields/Monthly_Margin__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Margin__c</fullName>
    <formula>Margin__c / ROUND(Contract_Length__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>