unpackaged/main/default/objects/Support_Contracts__c/fields/Monthly_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sale_Price__c</fullName>
    <formula>Total_Sale_Price__c / ROUND(Contract_Length__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>