unpackaged/main/default/objects/Support_Contracts__c/fields/Months_Left__c.field-meta.xml
<CustomField>
    <fullName>Months_Left__c</fullName>
    <formula>(MONTH( Finish_Date__c ) + (12*(YEAR( Finish_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>