unpackaged/main/default/objects/Support_Contracts__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner (Legacy)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>