unpackaged/main/default/objects/Support_Contracts__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>( Total_Sale_Price__c - Total_Buy_Price__c )/ Total_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>