unpackaged/main/default/objects/Support_Contracts__c/fields/SC_Always_OneV__c.field-meta.xml
<CustomField>
    <fullName>SC_Always_OneV__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Always One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>