unpackaged/main/default/objects/Support_Contracts__c/fields/SiemensIsCurrentFY__c.field-meta.xml
<CustomField>
    <fullName>SiemensIsCurrentFY__c</fullName>
    <formula>IF(
TEXT(YEAR(TODAY())) = IF( MONTH(Finish_Date__c) &gt;= 10,
TEXT(YEAR(Finish_Date__c)+1),
TEXT(YEAR(Finish_Date__c)) ) ,
"TRUE", "FALSE")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siemens Is Current FY</label>
    <type>Text</type>
</CustomField>