unpackaged/main/default/objects/Support_Contracts__c/fields/Support_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Contract_Type__c</fullName>
    <label>Support Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Majenta Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Maintenance Plan</fullName>
                <isActive>false</isActive>
                <label>Maintenance Plan</label>
            </value>
            <value>
                <fullName>Subscription</fullName>
                <isActive>false</isActive>
                <label>Subscription</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>