unpackaged/main/default/objects/Support_Contracts__c/fields/Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Supported_By__c</fullName>
    <label>Supported By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>AVNET</fullName>
            </value>
            <value>
                <fullName>Bell Micro</fullName>
            </value>
            <value>
                <fullName>BIMobject UK Ltd</fullName>
            </value>
            <value>
                <fullName>CAD-IT</fullName>
            </value>
            <value>
                <fullName>CAD Partner</fullName>
            </value>
            <value>
                <fullName>CANNON</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Clarity</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>CMS/BakBone</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Computer 2000</fullName>
            </value>
            <value>
                <fullName>Cool Orange</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Datech</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>DNS</fullName>
            </value>
            <value>
                <fullName>DNS/NetApp</fullName>
            </value>
            <value>
                <fullName>Elysium</fullName>
            </value>
            <value>
                <fullName>Envisage</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
            <value>
                <fullName>Future CAD</fullName>
            </value>
            <value>
                <fullName>Geomagic</fullName>
            </value>
            <value>
                <fullName>Getech</fullName>
            </value>
            <value>
                <fullName>Hammer</fullName>
            </value>
            <value>
                <fullName>Hammer/Overland</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Icona</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>