unpackaged/main/default/objects/Support_Contracts__c/fields/Total_Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy_Price__c</fullName>
    <label>Total Buy Price</label>
    <summarizedField>Support_Product__c.Total_Buy__c</summarizedField>
    <summaryFilterItems>
        <field>Support_Product__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Support_Product__c.Support_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>