unpackaged/main/default/objects/Support_Contracts__c/fields/Vendor_jh__c.field-meta.xml
<CustomField>
    <fullName>Vendor_jh__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elysium</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>FORD / Evergreen</fullName>
            </value>
            <value>
                <fullName>FORD / JLR</fullName>
            </value>
            <value>
                <fullName>JLR</fullName>
            </value>
            <value>
                <fullName>JLR / Evergreen</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>MX / Evergreen</fullName>
            </value>
            <value>
                <fullName>NISSAN</fullName>
            </value>
            <value>
                <fullName>NISSAN / Elysium</fullName>
            </value>
            <value>
                <fullName>NISSAN / JLR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>