unpackaged/main/default/objects/Support_Contracts__c/listViews/Data_Services_Support_Contracts.listView-meta.xml
<ListView>
    <fullName>Data_Services_Support_Contracts</fullName>
    <columns>Finish_Month__c</columns>
    <columns>Contract_No_Site_ID__c</columns>
    <columns>Total_Sale_Price__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Data Services</value>
    </filters>
    <filters>
        <field>Finish_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Data Services Support Contracts</label>
</ListView>