unpackaged/main/default/objects/Support_Contracts__c/listViews/Expired_Support_Contracts.listView-meta.xml
<ListView>
    <fullName>Expired_Support_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Supported_By__c</columns>
    <columns>Contract_No_Site_ID__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Finish_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired Support Contracts</label>
</ListView>