unpackaged/main/default/objects/Support_Contracts__c/listViews/My_Support_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Support_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract_No_Site_ID__c</columns>
    <columns>Division__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Finish_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Support Contracts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>