unpackaged/main/default/objects/Support_Contracts__c/listViews/Siemens_PLM_Expired_Contracts.listView-meta.xml
<ListView>
    <fullName>Siemens_PLM_Expired_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Supported_By__c</columns>
    <columns>Contract_No_Site_ID__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Finish_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supported_By__c</field>
        <operation>equals</operation>
        <value>Siemens</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Siemens PLM Expired Contracts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>